Format time into moment

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/moment/min/moment.min.js"></script>
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <meta charset="utf-8">
     <title>Alarm Clock</title>
@@ -13,9 +14,11 @@
     <div class="container">
       <h3>Well look at the time! </h3>
       <h3 id="time"></h3>
-      <form id="alarm-set" method="post">
-        <label for="time">Alarm time:</label>
-        <input type="time" name="time" id="alarm">
+      <form class="form-inline" id="alarm-set" method="post">
+        <div class="form-group">
+          <label for="time">Alarm time:</label>
+          <input class="form-control" type="time" name="time" id="alarm">
+        </div>
         <button type="submit" class="btn">Set Alarm</button>
       </form>
       <div id="result">
