Made STOP button and realized need to change to 24 hour

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </form>
       <div id="result">
         <img src="./img/alarm.png" alt="ALARM" />
+        <button id="stop" class="btn btn-warning" name="button">STOP</button>
       </div>
     </div>
   </body>
