--- a/weather.html
+++ b/weather.html
@@ -12,6 +12,7 @@
       <label for="location">Enter a location:</label>
       <input id="location" type="text">
       <button class="btn-success" id="weatherLocation">Get Current Humidity!</button>
+      <div class="showCity"></div>
       <div class="showWeather"></div>
     </div>
   </body>
